fixed title alignment

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -22,8 +22,9 @@ p {
     width: 100%;
     height: 100%;
     flex-direction: column;
-    gap: 0px;
+    padding-top: 7rem;
 }
+
 #content-container > * {
     margin: 0;
 }
@@ -32,6 +33,8 @@ p {
     background-color: blue;
     display: flex;
     justify-content: center;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 #logo {
@@ -63,7 +66,7 @@ p {
     flex-direction: row;
     background-color: red;
     justify-content: space-evenly;
-    margin-top: 6rem;
+    margin-top: 0px;
     align-items: center;
     gap: 5px;
 }
